# c-periphery

./: .gitignore  CMakeLists.txt
src/: gpio.c  i2c.c  mmio.c  serial.c  spi.c  version.c
tests/: test_gpio.c  test_i2c.c  test_mmio.c  test_serial.c  test_spi.c
